set OAuth client id and secret to up the api limit

--- a/src/screens/App.scss
+++ b/src/screens/App.scss
@@ -21,7 +21,7 @@
     width: 31.100625rem;
 
     @media (max-width: 414px) {
-      width: unset;
+      width: 80%;
     }
 
     .username-empty,
